# pytest-auto-fixture

./: .gitignore  .isort.cfg  CHANGES.txt  README.md  pyproject.toml  setup
.github/workflows/: pypi.yml  python.yml
pytest-auto-fixture/: __init__.py
pytest_autofixture/: __init__.py
tests/: conftest.py
