[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "MY_NEW_PACKAGE"
authors = [{name = "Daniel Pepper"}]
dynamic = ["version"]
description = "..."
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  'License :: OSI Approved :: MIT License',
]
requires-python = ">= 3"
dependencies = ["ambiguous"]

[project.optional-dependencies]
test = [
  "isort >= 5.13",
  "pytest >= 8.2",
]

[project.urls]
Homepage = "https://github.com/dpep/MY_NEW_REPO"

[tool.setuptools]
packages = ["MY_NEW_PACKAGE"]

[tool.setuptools.dynamic]
version = {attr = "MY_NEW_PACKAGE.__version__"}
